# pam_parallel_auth

./: Cargo.toml  README.md  install.sh
authselect/custom-parallel-auth/: README  fingerprint-auth  system-auth
src/: config.rs  dbus_helpers.rs  lib.rs  logging.rs  orchestrator.rs
src/backend/: fprint.rs  mod.rs  password.rs
